--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(doctest CONFIG REQUIRED)
 
 # Add sources here
-add_executable(TestFlatCombining testbase.cpp test_function_ptr.cpp)
+add_executable(TestFlatCombining testbase.cpp test_function_ptr.cpp test_flat_combining.cpp)
 target_link_libraries(TestFlatCombining PRIVATE FlatCombining::FlatCombining doctest::doctest)
 
 add_warning_flags(TestFlatCombining)
